apps/navidrome/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: navidrome
  namespace: default
spec:
  parentRefs:
    - name: private
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - navidrome.fruitiex.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: navidrome
          port: 4533
